--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,104 @@
 #container {
-  text-align: center;
+    text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 #container strong {
-  font-size: 20px;
-  line-height: 26px;
+    font-size: 20px;
+    line-height: 26px;
 }
 
 #container p {
-  font-size: 16px;
-  line-height: 22px;
+    font-size: 16px;
+    line-height: 22px;
 
-  color: #8c8c8c;
+    color: #8c8c8c;
 
-  margin: 0;
+    margin: 0;
 }
 
 #container a {
-  text-decoration: none;
+    text-decoration: none;
+}
+
+.mainBudgetContainer {
+    height: 200px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+
+    & > *:first-child {
+        display: flex;
+
+        font-size: 36px;
+        font-weight: 500;
+
+        & > * {
+            display: flex;
+            align-items: flex-end;
+        }
+
+        & > *:last-child {
+            margin-left: 2px;
+            font-size: 50%;
+            padding-bottom: 8px;
+        }
+    }
+
+    & > *:last-child {
+        color: var(--ion-color-medium);
+    }
+}
+
+.contentContainer {
+    height: 100%;
+
+    background: var(--ion-color-light);
+
+    display: flex;
+    flex-flow: column;
+
+    & > *:first-child {
+        flex: 1.5;
+    }
+
+    & > *:last-child {
+        flex: 4.5;
+    }
+}
+
+.cardContainer {
+    display: flex;
+    flex-flow: column;
+    overflow-y: scroll;
+    padding: 0 50px;
+}
+
+.card {
+    min-height: 120px;
+    background: lightgoldenrodyellow;
+    border-radius: 20px;
+
+    background: var(--ion-color-primary-contrast);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+
+    &:first-child {
+        margin-top: 0;
+    }
+
+    & > *:first-child {
+        margin-right: 40px;
+    }
+
+    margin-bottom: 10px;
 }
