--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,12 +12,12 @@
 <ion-content [fullscreen]="true">
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button>
+    <ion-fab-button (click)='handleOpenAddPage()'>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
-  <div class='contentContainer'>
+  <div class=' contentContainer'>
     <div class='mainBudgetContainer'>
       <div>
         <span>90,000</span>
