--- a/src/global.scss
+++ b/src/global.scss
@@ -26,3 +26,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap");
+
+.alert-class {
+    --background: #e5e5e5;
+}
